syntax = "proto3";
package account.team;

import "google/protobuf/timestamp.proto";

/* Group of users.
 * Next Id: 7 */
 message Team {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
  oneof parent {
    string client_id = 5;
    string team_id = 6;
  }
}
